--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,11 @@
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>io.hypersistence</groupId>
+			<artifactId>hypersistence-utils-hibernate-63</artifactId>
+			<version>3.7.5</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springdoc</groupId>
