--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     enabled: true
 
   datasource:
-    url: "jdbc:postgresql://localhost:5432/papirfly"
+    url: "jdbc:postgresql://localhost:54320/papirfly" # points to docker image from compose.yml
     username: "postgres"
     password: "postgres"
 
