--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,12 @@ spring:
     username: "postgres"
     password: "postgres"
 
+server:
+  servlet:
+    context-path: /api
 
 springdoc:
   api-docs:
     path: /api-docs
   swagger-ui:
-    path: /api-docs/swagger-ui.html
+    path: /api-docs/swagger-ui.html # http://localhost:8080/api/api-docs/swagger-ui/index.html
